--- a/proj/src/.vscode/settings.json
+++ b/proj/src/.vscode/settings.json
@@ -6,5 +6,9 @@
   "editor.tabSize": 2,
   "editor.wordWrap": "bounded",
   "editor.wordWrapColumn": 100,
-  "files.associations": { },
+  "files.associations": {
+    "*.embeddedhtml": "html",
+    "stdint.h": "c",
+    "i8254.h": "c"
+  },
 }
